<?xml version="1.0"?>
<package format="2">
  <name>battery_status</name>
  <version>0.0.0</version>
  <description>The battery_status package</description>

  <maintainer email="odroid@todo.todo">odroid</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>wiringPi</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>wiringPi</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>

</package>
